# steam-trajectory

./: .gitignore  SETUP.md  candidate_appids.csv  cohort_appids.csv  pyproject.toml  schema.sql
notebooks/: 00_cohort_selection.ipynb  01_data_ingestion.ipynb  01_scrape_and_load.ipynb  02_data_visualization.ipynb  03_baseline_model.ipynb
steam_trajectory/db/: connection.py  writer.py
steam_trajectory/features/: builder.py
steam_trajectory/ingest/: kaggle_loader.py  steam_api_client.py  steamcharts_scraper.py
